--- a/css/loading.css
+++ b/css/loading.css
@@ -25,3 +25,17 @@ body {
     font-size: 50px;
     color: purple;
 }
+
+.home-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.home #home-btn {
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    font-size: 20px;
+    color: white;
+}
