--- a/css/progress.css
+++ b/css/progress.css
@@ -88,3 +88,17 @@ body {
     background-color: var(--grey);
     cursor: not-allowed;
 }
+
+.home-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.home #home-btn {
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    font-size: 20px;
+    color: white;
+}
