Tue, Mar 21, 2023, 2:38 PM -07:00

--- a/css/counter.css
+++ b/css/counter.css
@@ -5,4 +5,17 @@ body {
     background-color: #8e44ad;
     color: #fff;
     display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    overflow: hidden;
+}
+
+.counter-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    margin: 30px 50px;
 }
