--- a/css/counter.css
+++ b/css/counter.css
@@ -19,3 +19,14 @@ body {
     justify-content: center;
     margin: 30px 50px;
 }
+
+.counter {
+    font-size: 60px;
+    margin-top: 10px;
+}
+
+@media (max-width: 580px) {
+    body {
+        flex-direction: column;
+    }
+}
