Thu, Apr 13, 2023, 2:20 PM -07:00

--- a/css/index.css
+++ b/css/index.css
@@ -56,3 +56,19 @@ body {
 .sounds {
     height: 50px;
 }
+
+.jokes {
+    height: 50px;
+}
+
+.counter {
+    height: 50px;
+}
+
+.color {
+    height: 50px;
+}
+
+.typing {
+    height: 50px;
+}
